log/2021-05-08T11:19:14+0800.log
Autotest: Begin at 2021年 05月 08日 星期六 11:19:14 CST
[32m[ found your pageReplace.cpp ][0m
pageReplace.cpp:1:1: error: 'include' does not name a type
 include "pageReplace.h"
 ^
make: *** [main] Error 1
[31m[01m[ compile error ][0m
[33m[01m[ You got 0 (of 100) this time. 2021年 05月 08日 星期六 11:19:18 CST ][0m
